--- a/sea-battle/Makefile
+++ b/sea-battle/Makefile
@@ -1,16 +1,16 @@
 all: main.o ship.o ship-manager.o field.o
 	g++ main.o ship.o ship-manager.o field.o -o lb
 
-main.o: main.cpp
+main.o: main.cpp field.h shipManager.h ship.h
 	g++ -lstdc++ -c main.cpp
 
 ship.o: ship.cpp ship.h
 	g++ -c ship.cpp
 
-ship-manager.o: ship-manager.cpp ship-manager.h ship.h
-	g++ -c ship-manager.cpp
+ship-manager.o: shipManager.cpp shipManager.h ship.h
+	g++ -c shipManager.cpp
 
-field.o: field.cpp field.h ship-manager.h ship.h
+field.o: field.cpp field.h shipManager.h ship.h
 	g++ -c field.cpp
 
 clean:
